@@ -318,3 +318,4 @@ _cmsGetTransformUserData                 =   _cmsGetTransformUserData
 _cmsSetTransformUserData                 =   _cmsSetTransformUserData
 _cmsGetTransformFormatters16             =   _cmsGetTransformFormatters16
 _cmsGetTransformFormattersFloat          =   _cmsGetTransformFormattersFloat
+cmsGetHeaderCreator                      =   cmsGetHeaderCreator
